syntax = "proto3";
package io.openlineage.flink.proto.event;
option java_package = "io.openlineage.flink.proto.event";
option java_multiple_files = true;

message OutputEvent {
  string id = 1;
  int64 version = 2;
  int64 counter = 3;
  SubOutputEvent subEvent = 4;
}

message SubOutputEvent {
  string id = 1;
  SubSubOutputEvent subSubEvent = 2;
  repeated int64 arr = 3;
}

message SubSubOutputEvent {
  string id = 1;
  int64 version = 2;
}